iotutils/esphome/esphome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: esphome
  namespace: iotutils
  
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll      
    keel.sh/pollSchedule: "@every 4h"
    keel.sh/approvals: "1"
    keel.sh/approvalDeadline: "720"   
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: esphome
      app.kubernetes.io/name: esphome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: esphome
        app.kubernetes.io/name: esphome
    spec:      
      containers:
      - name: esphome
        image: esphome/esphome:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6052
          
        volumeMounts:
        - mountPath: /config
          name: esphome-config-volume
        - mountPath: /cache
          name: cache-volume
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 192.168.50.13 # YOUR DNS SERVER
        searches:
          - home.arpa  # YOUR DOMAIN NAME
      volumes:
      - name: esphome-config-volume
        persistentVolumeClaim: 
          claimName: esphome-config-volume
      - name: cache-volume
        emptyDir:
          sizeLimit: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: iotutils
  labels:
    app.kubernetes.io/name: esphome
spec:
  selector:
    app.kubernetes.io/name: esphome
  ports:
  - port: 6052
    protocol: TCP
    targetPort: 6052
    name: web
