iotutils/esphome/esphome-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: esphome-web-ui
  namespace: iotutils
  
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`esphome.home.arpa`)
    kind: Rule
    services:
      - name: esphome
        port: 6052
